--- a/view/common/helper/iiif-viewers.phtml
+++ b/view/common/helper/iiif-viewers.phtml
@@ -48,7 +48,7 @@ $tifyAttr = getIconAttr($this, $tifyIconId, $iconAttr);
 <div style="margin-top : 10px; margin-bottom : 10px;">
     <iframe src="<?php echo $config["asset"]; ?>/vendor/uv/uv.html#?manifest=<?php echo $manifest; ?>" width="100%" height="600" allowfullscreen frameborder="0"></iframe>
     <div class="text-right" style="margin-top : 10px;">
-        <a href="<?php echo $manifest; ?>" title="<?php echo $translate('IIIF Manifest'); ?>" target="_blank"><img style="height: 30px" <?php echo $logoAttr; ?> /></a>
+        <a href="<?php echo $manifest; ?>?manifest=<?php echo $manifest; ?>" title="<?php echo $translate('IIIF Manifest'); ?>" target="_blank"><img style="height: 30px" <?php echo $logoAttr; ?> /></a>
         <?php if($config["setting"]["iiifviewers_mirador"]): ?>
             <a style="margin-left : 10px;" href="<?php echo $config["setting"]["iiifviewers_mirador"].$manifest; ?>" title="Mirador" target="_blank"><img style="height: 30px" <?php echo $miradorAttr; ?> /></a>
         <?php endif; ?>
