--- a/view/common/helper/iiif-viewers.phtml
+++ b/view/common/helper/iiif-viewers.phtml
@@ -39,10 +39,10 @@ $text = $setting['viewer_help_text'] ?? '';
 <div style="margin-top : 10px; margin-bottom : 10px;">
     <?php if($viewer == "mirador"): ?>
     <iframe
-        src="<?php echo $config["asset"]; ?>/vendor/mirador/index.html?manifest=<?php echo $manifest; ?>&lang=<?php echo $lang; ?>"
+        src="<?php echo $config["asset"]; ?>vendor/mirador/index.html?manifest=<?php echo $manifest; ?>&lang=<?php echo $lang; ?>"
         width="100%" height="600" allowfullscreen frameborder="0"></iframe>
     <?php else: ?>
-    <iframe src="<?php echo $config["asset"]; ?>/vendor/uv/uv.html#?manifest=<?php echo $manifest; ?>" width="100%"
+    <iframe src="<?php echo $config["asset"]; ?>vendor/uv/uv.html#?manifest=<?php echo $manifest; ?>" width="100%"
         height="600" allowfullscreen frameborder="0"></iframe>
     <?php endif; ?>
     <div class="text-right" style="margin-top : 10px;">
